TdxHack2025/force-app/main/default/objects/Doctor__c/fields/Availability_Time_From__c.field-meta.xml
<CustomField>
    <fullName>Availability_Time_From__c</fullName>
    <label>Availability Time From</label>
    <type>Time</type>
</CustomField>