TdxHack2025/force-app/main/default/objects/Doctor__c/fields/Availability_Time_To__c.field-meta.xml
<CustomField>
    <fullName>Availability_Time_To__c</fullName>
    <label>Availability Time To</label>
    <required>true</required>
    <type>Time</type>
</CustomField>