TdxHack2025/force-app/main/default/objects/Doctor__c/fields/Doctor_Speciality__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Speciality__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Doctor Speciality</label>
    <referenceTo>Doctor_Speciality__c</referenceTo>
    <relationshipLabel>Doctors</relationshipLabel>
    <relationshipName>Doctors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>