TdxHack2025/force-app/main/default/objects/Doctor__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Hospital__c</referenceTo>
    <relationshipLabel>Doctors</relationshipLabel>
    <relationshipName>Doctors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>