TdxHack2025/force-app/main/default/objects/Doctor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Doctor_Speciality__c</columns>
    <columns>Availability_Time_From__c</columns>
    <columns>Availability_Time_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>